<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:textSize="10sp"
        android:textColor="#212121"
        android:layout_marginTop="0dp"
        />
    <EditText
        android:id="@+id/no"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:ems="6"
        android:textColor="#0d47a1"
        android:layout_gravity="left"
        android:layout_marginTop="0dp"
        android:textSize="9sp"
        />


    <TextView
        android:text="@string/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:textSize="10sp"
        android:textColor="#212121"
        android:layout_marginTop="0dp"
        />
    <EditText
        android:id="@+id/guess"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textColor="#0d47a1"
        android:ems="6"
        android:hint="@string/hint2"
        android:textColorHint="#a1887f"
        android:layout_gravity="right"
        android:layout_marginTop="0dp"
        android:textSize="9sp"
        />

    <TextView
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:gravity="left"
        android:textSize="10sp"
        android:layout_marginTop="0dp"
        android:textColor="#212121"
        />
    <EditText
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="numberPassword"
        android:hint="@string/hint1"
        android:textColorHint="#a1887f"
        android:textColor="#0d47a1"
        android:ems="6"
        android:layout_gravity="left"
        android:layout_marginTop="0dp"
        android:textSize="9sp"
        />


    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginTop="0dp"
        android:text="@string/compare"
        android:textSize="9sp"
        android:textColor="#004d40"
        android:onClick="compare"
        />
    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        />
    <Button
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/savedata"
        android:textSize="9sp"
        android:layout_gravity="left"
        android:textColor="#1a237e"/>

    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/reset"
        android:layout_gravity="right"
        android:textSize="9sp"
        android:textColor="#263238" />
    <TextView
        android:id="@+id/compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="0dp"
        android:textSize="10sp"
        android:textColor="#3e2723"
        />
</LinearLayout>